Fixed some alignment and size

--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,7 @@
 .hero-img{
   height: 60vh;
   width: 100%;
+  min-width: 450px;
 }
 
 .hero-wraper{
@@ -110,15 +111,18 @@
   border-radius: 0px 0px 300px 0px;
 }
 
-.hero-desc-wraper{
-  
-}
 .hero-description{
   width: 90%;
 }
 
-.hero-description ,.hero-title{
+.hero-description {
   color: white;
+}
+.hero-title {
+  color: #2c3e50; 
+  font-weight: bold;
+  font-size: 2.0rem; 
+  text-align: center;
 }
 
 .model-desc{
@@ -188,4 +192,7 @@
 .linkedin:hover {
   background-color: #00649f;
 }
-``
+
+.footer-co-wraper{
+  gap: 15%;
+}
