--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -774,7 +774,7 @@ justify-content: center;
 }
 
 .send_bt {
-    width: 100%;
+    width: 450px;
     float: left;
     margin-top: 40px;
 }
